--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+<style>
+  *{
+    margin: 0;
+    padding: 0;
+
+  }
+  body{
+  font-family: Pangea,sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #231f20;
+  text-align: left;
+}
+:root{
+  --title-color: #000;
+    --message-color: #000;
+    --overlay-background-color: #0000004a;
+    --container-box-shadow: #0000004a 0px 3px 8px 0px;
+    --base-background-color: #fff;
+    --button-color: #4083ff;
+    --button-background-color: #fff;
+    --button-border-color: #e0e0e0;
+    --button-background-color-disabled: #f5f5f5;
+    --button-background-color-hover: #f5f5f5;
+    --button-box-shadow-active: inset 0 2px 0px 0px #00000014;
+    --input-background-color: #ebebeb;
+    --input-background-color-hover: #dfdfdf;
+    --font-size-m: 16px;
+    --font-size-s: 14px;
+    --font-weight-black: 900;
+    --font-weight-bold: 700;
+    --font-weight-medium: 500;
+    --font-weight-normal: 400;
+    --font-weight-light: 300;
+}
+</style>
 <body>
   <app-root></app-root>
 </body>
